--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "dotenv": "^16.4.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.4"
   }
